resolves the list group double border issue #20395

--- a/scss/_list-group.scss
+++ b/scss/_list-group.scss
@@ -70,6 +70,7 @@
 
 .list-group-flush {
   .list-group-item {
+    border-width: $list-group-border-width 0;
     border-radius: 0;
   }
 }
